# MNISQ-quantum-circuit-dataset

./: .dockerignore  .gitignore  CONTRIBUTING_en.md  CONTRIBUTING_ja.md  LICENSE  Makefile  README.md  Source.py  index.html  metadata  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: wheel.yml
converter/: archiver.py  c2.py  cleanup_data.py  download.py  eval_num.py  job_gen.py  names.py  qasm_convert.py  qiskit_convert.py  rename.py
doc/source/: conf.py  index.rst  modules.rst
docker/: AQCE.cpp  Dockerfile  create_container.sh  pyproject.toml
generator/: AQCE_from_program.py  Source.py  archiver.py  config.ini  mnist_runner.py  mnist_worker.py  pbspro.py
generator_scripts/: README.md  cifar_10_runner.py  cifar_10_worker.py  config.ini  create_container.sh  env_initializer.py  initializer.py  merge.py  mnist_runner.py  mnist_worker.py  pbspro.py
mnisq/: __init__.py
mnisq/config/: __init__.py
mnisq/fashion_mnist/: __init__.py  loader.py
mnisq/kuzushiji_mnist/: __init__.py  loader.py
mnisq/mnist/: __init__.py  loader.py
qml_experiments/: Ideal_K_generatorGitHub.py  Kernel_states_1v1.py  Kernel_states_1vall.py  Kernel_version_1v1.py  Kernel_version_1vall.py  qasm_to_qulacs.py
qml_experiments/final_results/: results_circuit_1v1.csv  results_circuit_1vall.csv  results_states_1v1.csv  results_states_1vall.csv
qulacs_dataset/: __init__.py
qulacs_dataset/fashion_mnist/: __init__.py  loader.py
qulacs_dataset/kuzushiji_mnist/: __init__.py  loader.py
qulacs_dataset/mnist/: loader.py  (+1 more)
tests/: test_sample.py
(+31 files in other folders)
